# log8415-tp-final

./: .gitignore  README.md  pyproject.toml
src/bench/: benchmark.sh
src/cluster/: __main__.py  setup.py
src/deploy/: cleanup.py  config.py  infra.py  provisioning.py  utils.py
src/security/: __main__.py  setup.py
src/security/app/: config.example.json  gatekeeper.ts  proxy.ts  trusted.ts
src/standalone/: __main__.py  setup.py
src/templates/: cluster_mgmd.sh.j2  cluster_mysql.sh.j2  cluster_ndbd.sh.j2  mysql_apt_config.sh.j2  mysql_root_setup.sh.j2  pattern_deploy.sh.j2  sakila.sh.j2  standalone.sh.j2
